--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 </head>
 <body>
   <h1>Hello from My Flask App!</h1>
-  <h2>tejeshwar</h2>
-  <h3>python</h3>
-  <h4>anbarasan</h4>
+  <h2>tejeshwar  3/9/25</h2>
+ 
   <p>sg deleted</p>
   <p>winner winner chicken dinner</p>
 </body>
