--- a/index.html
+++ b/index.html
@@ -1,13 +1,166 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My WebApp</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tejeshwar's Blog</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #0f172a, #1e293b, #334155);
+      color: #f1f5f9;
+      line-height: 1.6;
+    }
+
+    header {
+      text-align: center;
+      padding: 3rem 1rem;
+      background: linear-gradient(90deg, #1e40af, #3b82f6, #60a5fa);
+      color: #fff;
+      border-bottom-left-radius: 50% 20%;
+      border-bottom-right-radius: 50% 20%;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 3rem;
+      letter-spacing: 2px;
+      animation: glow 2s ease-in-out infinite alternate;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      margin-top: 0.5rem;
+      opacity: 0.9;
+    }
+
+    @keyframes glow {
+      from { text-shadow: 0 0 10px #60a5fa; }
+      to { text-shadow: 0 0 20px #93c5fd; }
+    }
+
+    .container {
+      max-width: 1200px;
+      margin: 3rem auto;
+      padding: 0 1rem;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 2rem;
+    }
+
+    .card {
+      background: #1e293b;
+      border-radius: 20px;
+      overflow: hidden;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.4);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 20px 35px rgba(0,0,0,0.6);
+    }
+
+    .card img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
+
+    .card-content {
+      padding: 1.5rem;
+    }
+
+    .card-content h2 {
+      margin: 0 0 0.5rem;
+      font-size: 1.5rem;
+      color: #3b82f6;
+    }
+
+    .card-content p {
+      margin-bottom: 1rem;
+      font-size: 1rem;
+      color: #cbd5e1;
+    }
+
+    .card-content a {
+      text-decoration: none;
+      color: #fff;
+      background: linear-gradient(90deg, #3b82f6, #60a5fa);
+      padding: 0.6rem 1.2rem;
+      border-radius: 10px;
+      transition: background 0.3s ease;
+    }
+
+    .card-content a:hover {
+      background: linear-gradient(90deg, #2563eb, #3b82f6);
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem 1rem;
+      background: #0f172a;
+      margin-top: 3rem;
+      color: #94a3b8;
+    }
+
+    footer a {
+      color: #60a5fa;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hello from My Flask App!</h1>
-  <h2>tejeshwar  3/9/25</h2>
- 
-  <p>sg deleted</p>
-  <p>winner winner chicken dinner</p>
+  <header>
+    <h1>Tejeshwar's Blog</h1>
+    <p>Sharing my thoughts, projects, and experiences 🚀</p>
+  </header>
+
+  <div class="container">
+    <!-- Blog Post 1 -->
+    <div class="card">
+      <img src="https://source.unsplash.com/600x400/?technology,coding" alt="Tech Blog">
+      <div class="card-content">
+        <h2>Deepfake Detection Project</h2>
+        <p>How we built an AI-based deepfake detection system using VGG and ResNet models, ensuring media authenticity.</p>
+        <a href="https://hub.docker.com/r/tejeshwarofficial/deepfake-app" target="_blank">Read More</a>
+      </div>
+    </div>
+
+    <!-- Blog Post 2 -->
+    <div class="card">
+      <img src="https://source.unsplash.com/600x400/?cloud,devops" alt="DevOps Blog">
+      <div class="card-content">
+        <h2>End-to-End CI/CD Pipeline</h2>
+        <p>A fully automated pipeline with GitHub Actions, Docker, AWS, and Terraform — reducing manual work to zero.</p>
+        <a href="https://github.com/tejeshwarm/end-to-end-pipeline" target="_blank">Read More</a>
+      </div>
+    </div>
+
+    <!-- Blog Post 3 -->
+    <div class="card">
+      <img src="https://source.unsplash.com/600x400/?healthcare,app" alt="Healthcare Project">
+      <div class="card-content">
+        <h2>Hospital Appointment System</h2>
+        <p>Secure backend API with Java Spring Boot, MongoDB, and JWT for role-based access to patient, doctor, and admin features.</p>
+        <a href="https://github.com/tejeshwarm/HospitalAppointment" target="_blank">Read More</a>
+      </div>
+    </div>
+
+    <!-- Blog Post 4 -->
+    <div class="card">
+      <img src="https://source.unsplash.com/600x400/?ai,mining" alt="AI Project">
+      <div class="card-content">
+        <h2>Smart Operator Assistant</h2>
+        <p>AI assistant for heavy equipment operators with 12+ smart features, improving safety and efficiency in mining.</p>
+        <a href="https://hub.docker.com/r/tejeshwarofficial/caterpillar-suite" target="_blank">Read More</a>
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <p>© 2025 Tejeshwar M | <a href="https://tejeshwarthoughts.blogspot.com/" target="_blank">My Blogspot</a> | <a href="https://www.linkedin.com/in/tejeshwar-m" target="_blank">LinkedIn</a></p>
+  </footer>
 </body>
 </html>
